footer width 100% - fixed

--- a/index.html
+++ b/index.html
@@ -11,42 +11,39 @@
 <body>
   <!-- code a Hero / Banner section -->
   <div class="banner" style="background-image: url('images/background.png');">
-
     <div class="container">
       <h1>Le Wagon brings tech skills to creative people!</h1>
       <p>Change your life and learn to code at one of our campuses around the world.</p>
       <a class="btn-primary" href="#">Apply now!</a>
     </div>
-
   </div>
 
   <!-- code a "How it works" section -->
   <div class="container">
-
     <h2 class="text-center">How it works</h2>
 
     <div class="cards">
 
       <div class="card">
         <img src="images/apply.svg" alt="Apply">
-        <h3>Apply</h3>
+        <h4>Apply</h3>
         <p>Contact us for more details. We'll be happy to meet you</p>
       </div>
 
       <div class="card">
         <img src="images/learn.svg" alt="Learn">
-        <h3>Learn to Code</h3>
+        <h4>Learn to Code</h4>
         <p>We are happy to walk you through your new adventure</p>
       </div>
 
       <div class="card">
         <img src="images/product.svg" alt="Product">
-        <h3>Buil Products</h3>
+        <h4>Build Products</h4>
         <p>"Learn to code, change your life"</p>
       </div>
 
     </div>
-  </dir>
+  </div>
 
   <!-- code a footer -->
   <div class="footer">
